# research

./: .gitignore  README.md
asr/: README.md  wer.py
exp/: .gitignore  FileManager.cpp  Makefile  README.md  User.cpp  User.h  X  cookies0.txt  inferText_results.txt
exp/asr_cl/: .gitignore  analyze.ipynb  asr_result_fisher.txt  asr_result_librispeech.txt  asr_result_tedlium.txt  cl_result_fisher_randomforest.txt  cl_result_fisher_svc.txt  cl_result_librispeech_randomforest.txt  cl_result_librispeech_svc.txt  cl_result_regular_randomforest.txt  cl_result_regular_svc.txt  cl_result_tedlium_randomforest.txt  cl_result_tedlium_svc.txt  data.txt
exp/asr_mt/: README.md  analyze.ipynb  asr_result_fisher.txt  asr_result_librispeech.txt  asr_result_tedlium.txt  data.txt  mt_result_fisher_google.txt  mt_result_fisher_microsoft.txt  mt_result_librispeech_google.txt  mt_result_librispeech_microsoft.txt  mt_result_regular_google.txt  mt_result_regular_microsoft.txt  mt_result_tedlium_google.txt  mt_result_tedlium_microsoft.txt
exp/asr_qa/: README.md  analyze.html  analyze.ipynb  data.txt  (+15 more)
mt/: .gitignore  README.md  bleu.py  google.py  microsoft.py  microsoft_temp.txt  process_microsoft_temp_result.py
qa/: README.md
sa/: README.md  google.py
treadmill/: .gitignore  Makefile.am  configure.ac
treadmill/scripts/recipes/: fbthrift.sh  folly.sh  wangle.sh
treadmill/services/lucida/: .gitignore  Connection.h  FileManager.cpp  FileManager.h  LucidaService.h  Makefile  Request.h  Treadmill.cpp  User.cpp  User.h  Workload.h  main.cpp
treadmill/services/lucida/asr-test/: client.py
treadmill/services/lucida/text/: queries.txt
treadmill/services/sleep/gen-cpp2/: Sleep.cpp  Sleep.h  Sleep.tcc  Sleep_client.cpp  Sleep_custom_protocol.h  Sleep_processmap_binary.cpp  sleep_constants.cpp  sleep_constants.h  sleep_types.cpp  sleep_types.h  sleep_types.tcc  sleep_types_custom_protocol.h
treadmill/services/sleep/gen-cpp2/.deps/: Sleep.Po  Sleep_client.Po  Sleep_processmap_binary.Po  Sleep_processmap_compact.Po  sleep_constants.Po  sleep_types.Po
tts/: README.md
(+34 files in other folders)
